--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 <style>
   body{
     background-color: #FFF !important;
@@ -388,3 +389,26 @@ i{
     border-radius: 3px;
 
   }
+   .grupo-select {
+      background-color: #dde1eb;
+      color: rgb(11, 11, 11);
+      border-radius: 5px;
+      padding: 8px;
+      font-weight: bold;
+    }
+    #loading {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.8);
+      z-index: 9999;
+      text-align: center;
+      padding-top: 20%;
+    }
+    .spinner-border {
+      width: 3rem;
+      height: 3rem;
+    }
